style: prevent jumping scrollbar
by always showing it

--- a/app/modules/general/scss/_general_settings.scss
+++ b/app/modules/general/scss/_general_settings.scss
@@ -13,6 +13,9 @@ html, body{
 }
 html{
   height: 100%;
+  // Prevent jumping scrollbar, the simple/classic way
+  // Cf https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/
+  overflow-y: scroll;
 }
 
 // Foundation had this, and now everything relies on it:
